fix service slide box alignment bug

--- a/src/components/services/ServiceDisplay.css
+++ b/src/components/services/ServiceDisplay.css
@@ -8,6 +8,7 @@
     height: 25vw;
     width: 25vw;
     display: inline-block;
+    vertical-align: top;
     background-color: transparent;
     margin: 0 1.33vw;
     z-index: 1;
